<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/plantilla_card"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    card_view:cardBackgroundColor="@color/color_vino"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="2dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="#FFFFFF"
        android:padding="10dp"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagenE"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/dobby"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombreEs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_nombre"
                    android:textColor="@color/color_primario"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/actorE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_actor"
                        android:layout_marginStart="5dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/casaE"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_casa"
                            android:layout_marginStart="5dp"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/patroE"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_patronus"
                                android:layout_marginStart="5dp"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/estadoE"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/txt_especie"
                                    android:layout_marginStart="5dp"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:paddingLeft="10dp"
                                    android:paddingTop="0dp"
                                    android:paddingRight="10dp"
                                    android:paddingBottom="0dp">

                                    <Button
                                        android:id="@+id/btn_perfil"
                                        android:layout_width="354dp"
                                        android:layout_height="match_parent"
                                        android:text="@string/txt_btn3"
                                        android:layout_margin="5dp"
                                        />

                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>
